Azure/AKS-examples/03-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:php7.1-apache
        ports:
        - containerPort: 80
