Azure/AKS-examples/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: wordpress
