Azure/AKS-examples/example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: testing
  labels:
    app: wordpress 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:php7.1-apache
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: testing
  labels:
    app: wordpress  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: wordpress
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: testing
  labels:
    app: wordpress 
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: wordpress.cluster-dev-dns-d5507078.hcp.brazilsouth.azmk8s.io
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
        path: /
